--- a/plugins/dynamix/DashStats.page
+++ b/plugins/dynamix/DashStats.page
@@ -557,35 +557,20 @@ function toggle_net(init) {
     $('.net_closed').show();
   }
 }
-function parseINI(data){
-    var regex = {
-        section: /^\s*\[\s*\"*([^\]]*)\s*\"*\]\s*$/,
-        param: /^\s*([^=]+?)\s*=\s*\"*(.*?)\s*\"*$/,
-        comment: /^\s*;.*$/
-    };
-    var value = {};
-    var lines = data.split(/[\r\n]+/);
-    var section = null;
-    lines.forEach(function(line){
-        if(regex.comment.test(line)){
-            return;
-        }else if(regex.param.test(line)){
-            var match = line.match(regex.param);
-            if(section){
-                value[section][match[1]] = match[2];
-            }else{
-                value[match[1]] = match[2];
-            }
-        }else if(regex.section.test(line)){
-            var match = line.match(regex.section);
-            value[match[1]] = {};
-            section = match[1];
-        }else if(line.length == 0 && section){
-            section = null;
-        };
-    });
-    return value;
-}
+var cpuload = new NchanSubscriber('/sub/cpuload');
+cpuload.on('message',function(message) {
+// message should be something like: {"cpuload": {"cpu":[0,0],"cpu0":[0,0],"cpu1":[0,0],"cpu2":[0,0],"cpu3":[0,0]}}
+// The array values are [<load-percentage>,<guest-percentage>].  guest-percentage is that part of load-percentage that is being consumed by VM guests
+// var json = $.parseJSON(message);
+// $.each(json["cpuload"],function(k,v) {
+//   $('#'+k).animate({width:v[0]+'%'},{step:function(){$('#'+k).css('overflow','visible');}}).text(v[0]+'%');
+// });
+// message is the cpuload.ini file contents
+  var ini = parseINI(message);
+  $.each(ini,function(k,v) {
+    $('#'+k).animate({width:v['host']+'%'},{step:function(){$('#'+k).css('overflow','visible');}}).text(v['host']+'%');
+  });
+});
 $(function() {
   dropdown('enter_share');
   dropdown('enter_view');
@@ -596,21 +581,6 @@ $(function() {
   update30();
   update15();
   context.init({preventDoubleContext:false});
-
-  var cpuload_sub = new NchanSubscriber('/sub/cpuload');
-  cpuload_sub.on("message", function(message, message_metadata) {
-    // message should be something like: {"cpuload": {"cpu":[0,0],"cpu0":[0,0],"cpu1":[0,0],"cpu2":[0,0],"cpu3":[0,0]}}
-    //  The array values are [<load-percentage>,<guest-percentage>].  guest-percentage is that part of load-percentage that is being consumed by VM guests
-//    var json = $.parseJSON(message);
-//    $.each(json["cpuload"],function(k,v) {
-//      $('#'+k).animate({width:v[0]+'%'},{step:function(){$('#'+k).css('overflow','visible');}}).text(v[0]+'%');
-//    });
-    // message is the cpuload.ini file contents
-    var ini = parseINI(message);
-    $.each(ini,function(k,v) {
-      $('#'+k).animate({width:v['host']+'%'},{step:function(){$('#'+k).css('overflow','visible');}}).text(v['host']+'%');
-    });
-  });
-  cpuload_sub.start();
+  cpuload.start();
 });
 </script>
