Enhancements in page forward/backward movement

--- a/plugins/dynamix/DeviceIdentify.page
+++ b/plugins/dynamix/DeviceIdentify.page
@@ -24,7 +24,7 @@ function disklog(disk,key,value) {
   $.post('/webGui/include/DiskLog.php',{disk:disk,key:key,value:value});
 }
 $(function() {
-  $.post("/webGui/include/SmartInfo.php",{cmd:'identify',port:'<?=addslashes(htmlspecialchars(isset($disks[$name]['device'])?$disks[$name]['device']:$name))?>',name:'<?=addslashes(htmlspecialchars($name))?>'}, function(data) {
+  $.post("/webGui/include/SmartInfo.php",{cmd:'identify',port:'<?=addslashes(htmlspecialchars($disks[$name]['device']??$name))?>',name:'<?=addslashes(htmlspecialchars($name))?>'}, function(data) {
     $('#disk_identify').html(data);
   });
 });
