--- a/plugins/dynamix/Selftest.page
+++ b/plugins/dynamix/Selftest.page
@@ -17,30 +17,7 @@ Cond="strpos($disks[$name]['status'],'_NP')===false"
 ?>
 <?
 $date = date('Ymd-Hi');
-$sheets = []; $n = 0;
-$type = isset($disks[$name]) ? 'Device' : 'New';
-if ($type=='New') {
-  $dev = $name;
-  foreach ($devs as $sheet) {
-    $sheets[] = $sheet['device'];
-    if ($sheet['device']==$name) {$i = $n; $file = $sheet['id']."-$date.txt";}
-    $n++;
-  }
-} else {
-  $disk = $disks[$name];
-  $dev  = $disk['device'];
-  $file = $disk['id']."-$date.txt";
-  foreach ($disks as $sheet) {
-    if ($sheet['name']=='flash' || strpos($sheet['status'],'_NP')) continue;
-    $sheets[] = $sheet['name'];
-    if ($sheet['name']==$name) { $i = $n; $spindown = "diskSpindownDelay.{$sheet['idx']}"; $delay = $sheet['spindownDelay']; }
-    $n++;
-  }
-}
 $live = exec("hdparm -C ".escapeshellarg("/dev/$dev")."|grep -Pom1 'active|unknown'");
-$end  = count($sheets)-1;
-$prev = $i>0 ? $sheets[$i-1] : $sheets[$end];
-$next = $i<$end ? $sheets[$i+1] : $sheets[0];
 $zip  = str_replace(' ','_',strtolower($var['NAME']))."-smart-$date.zip";
 
 function spindownDelay() {
@@ -193,21 +170,14 @@ function startLongTest() {
 <?endif;?>
   }
 }
-<?if (count($sheets)>1):?>
-var ctrl  = "<span class='status vhshift'><span class='waitmsg' style='display:none;font-size:small;font-style:italic;margin-right:8px'>please wait...</span><a href='/Main/<?=$type?>?name=<?=$prev?>' title='previous device'>";
-    ctrl += "<button type='button' style='margin-right:4px' onclick='this.disabled=true;$(\".waitmsg\").show();'><i class='fa fa-chevron-left'></i></button></a>";
-    ctrl += "<a href='/Main/<?=$type?>?name=<?=$next?>' title='next device'><button type='button' onclick='this.disabled=true;$(\".waitmsg\").show();'><i class='fa fa-chevron-right'></i></button></a></span>";
-
 $(function() {
+<?if (count($sheets)>1):?>
 <?if ($tabbed):?>
   $('.tabs').append(ctrl);
 <?else:?>
-  $('div[id=title]:not(".nocontrol")').each(function(){$(this).append(ctrl);});
+  $('div[id=title]:first').append(ctrl);
 <?endif;?>
-});
 <?endif;?>
-
-$(function() {
   var smarttest = $.cookie('test.<?=addslashes(htmlspecialchars($dev))?>');
   testUpdate(smarttest===undefined);
   if (smarttest !== undefined) $('#'+smarttest+'_test').val('Stop').removeAttr('disabled');
