--- a/plugins/dynamix/Eth0.page
+++ b/plugins/dynamix/Eth0.page
@@ -293,8 +293,7 @@ function checkNetworkAccess(form,port) {
     $(form).find('input[name^="VLANID:"]').prop('required',true);
   }
 }
-function addVLAN(port,disabled) {
-  if (disabled) return;
+function addVLAN(port) {
   var index = 1;
   while ($('#index-'+port+'-'+index).length) index++;
   var template = $($('<div/>').loadTemplate($('#network-template-'+port)).html().replace(/INDEX/g,index));
@@ -303,8 +302,7 @@ function addVLAN(port,disabled) {
   selectProtocol($('form[name="'+$(element).parent().attr('name')+'"]'),port);
   $(element).find('input').first().trigger('change');
 }
-function removeVLAN(element,disabled) {
-  if (disabled) return;
+function removeVLAN(element) {
   var id = $(element).attr('id').split('-');
   $(element).remove();
   $('#index-'+id[1]+'-0').find('select').first().trigger('change');
@@ -582,13 +580,12 @@ Enable VLANs:
 : <select name="TYPE" size="1" onchange="checkNetworkAccess(this.form,'eth0')">
   <?=mk_option($eth0['TYPE'], 'access', 'No');?>
   <?=mk_option($eth0['TYPE'], 'trunk', 'Yes');?>
-  </select>
-  <span class="access-eth0 pin" style="display:none" onclick="addVLAN('eth0',<?=$service?'true':'false'?>)"><i class="fa fa-plus-circle green"></i><em>add VLAN</em></span>
+  </select><?if (!$service):?><span class="access-eth0 pin" style="display:none" onclick="addVLAN('eth0')"><i class="fa fa-plus-circle green"></i><em>add VLAN</em></span><?endif;?>
 <?else:?>
 <div class="access-eth0 shade-<?=$display['theme']?>" style="display:none" markdown="1">
 VLAN number:
 : <input type="number" name="VLANID:<?=$i?>" min="1" max="4095" value="<?=$eth0["VLANID:$i"]?>" class="narrow gap" required>
-  <span class="pin" onclick="removeVLAN($('#index-eth0-<?=$i?>'),<?=$service?'true':'false'?>)"><i class="fa fa-minus-circle red"></i><em>remove VLAN</em></span>
+  <?if (!$service):?><span class="pin" onclick="removeVLAN($('#index-eth0-<?=$i?>'))"><i class="fa fa-minus-circle red"></i><em>remove VLAN</em></span><?endif;?>
 
 > Give each VLAN a unique identifier. Numbers range from 1 to 4095.
 
