--- a/plugins/dynamix/EthX.page
+++ b/plugins/dynamix/EthX.page
@@ -242,13 +242,12 @@ Enable VLANs:
 : <select name="TYPE" size="1" onchange="checkNetworkAccess(this.form,'ethX')">
   <?=mk_option($ethX['TYPE'], 'access', 'No');?>
   <?=mk_option($ethX['TYPE'], 'trunk', 'Yes');?>
-  </select>
-  <span class="pin access-ethX" style="display:none" onclick="addVLAN('ethX',<?=$service?'true':'false'?>)"><i class="fa fa-plus-circle green"></i><em>add VLAN</em></span>
+  </select><?if (!$service):?><span class="pin access-ethX" style="display:none" onclick="addVLAN('ethX')"><i class="fa fa-plus-circle green"></i><em>add VLAN</em></span><?endif;?>
 <?else:?>
 <div class="access-ethX shade-<?=$display['theme']?>" style="display:none" markdown="1">
 VLAN number:
 : <input type="number" name="VLANID:<?=$i?>" min="1" max="4095" value="<?=$ethX["VLANID:$i"]?>" class="narrow gap" required>
-  <span class="pin" onclick="removeVLAN($('#index-ethX-<?=$i?>'),<?=$service?'true':'false'?>)"><i class="fa fa-minus-circle red"></i><em>remove VLAN</em></span>
+  <?if (!$service):?><span class="pin" onclick="removeVLAN($('#index-ethX-<?=$i?>'))"><i class="fa fa-minus-circle red"></i><em>remove VLAN</em></span><?endif;?>
 
 > Give each VLAN a unique identifier. Numbers range from 1 to 4095.
 
